--- a/submissions/dissertation/bibliography.bib
+++ b/submissions/dissertation/bibliography.bib
@@ -83,6 +83,25 @@
 	year = {2007}
 }
 
+@inproceedings{Chen2008,
+	author = {Chen, Yiling and Fortnow, Lance and Lambert, Nicolas and Pennock,
+		David M. and Wortman, Jennifer},
+	title = {Complexity of Combinatorial Market Makers},
+	year = {2008},
+	isbn = {9781605581699},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/1386790.1386822},
+	doi = {10.1145/1386790.1386822},
+	booktitle = {Proceedings of the 9th ACM Conference on Electronic Commerce},
+	pages = {190–199},
+	numpages = {10},
+	keywords = {online learning with expert advice, prediction markets,
+		logarithmic market scoring rule market makers},
+	location = {Chicago, Il, USA},
+	series = {EC '08}
+}
+
 @inbook{AGTBook,
 	author = {Nisan, Noam and Roughgarden, Tim and Tardos, Eva and Vazirani, Vijay V.},
 	title = {Algorithmic Game Theory},
