--- a/submissions/dissertation/sections/introduction.tex
+++ b/submissions/dissertation/sections/introduction.tex
@@ -41,15 +41,16 @@ outcomes while incentivising users to act truthfully in all stages of the
 prediction market.
 
 The rest of this dissertation is structured as follows: in
-Section~\ref{sec:background} we give an overview of the current literature on
-algorithmic mechanism design and prediction markets, and discuss recent
-implementations of decentralised markets. In Section~\ref{sec:goals} we outline
-the motivations for undertaking the project and why we believe it to be
-worthwhile, and detail the successes that have been achieved so far.
-Section~\ref{sec:design} covers the high-level design of the market and
-introduces the theoretical model upon which our implementation is based, as
-well as issues related to project management and ethical considerations. In
-Section~\ref{sec:implementation} we then discuss our implementation of the
-prediction market, including the tools we have used to do so. Finally in
-Section~\ref{sec:evaluation} we reflect on the project's successes and failures
-and suggest areas for further development.
+Section~\ref{sec:background} we introduce the various types of prediction
+markets and different approaches by which they can be implemented. In
+Section~\ref{sec:literatureReview} we give an overview of existing
+implementations and the current literature within the algorithmic game theory
+community. In Section~\ref{sec:goals} we state our goals for the project and
+justify why we think this project is worthwhile. Section~\ref{sec:design}
+covers the high-level design of the market on which we base our implementation
+and introduces some theoretical considerations to take into account. In
+Section~\ref{sec:implementation} we discuss the details of our implementation
+of the decentralised market, including the tools we use to do so.
+Section~\ref{sec:projectManagement} covers our approach towards the management
+of the project. Finally, in Section~\ref{sec:evaluation} we reflect on the
+project's successes and suggest areas for improvement.
